--- a/build.gradle
+++ b/build.gradle
@@ -4,35 +4,70 @@
  * This project uses @Incubating APIs which are subject to change.
  */
 
+
 plugins {
-    id 'java-library'
-    id 'maven-publish'
+    id 'java'
+	id 'java-library'
+	id 'maven-publish'
+	id 'application'
 }
 
 repositories {
-    mavenLocal()
-    maven {
-        url = uri('https://repo.maven.apache.org/maven2/')
-    }
+    mavenCentral()
 }
 
 dependencies {
-    api 'com.google.code.gson:gson:2.10.1'
-    api 'org.apache.commons:commons-io:1.3.2'
-    testImplementation 'junit:junit:4.11'
+    api('com.google.code.gson:gson:2.10.1')
+	api('org.apache.commons:commons-io:1.3.2')
+
+	testImplementation(platform('org.junit:junit-bom:5.9.3'))
+	testImplementation('org.junit.jupiter:junit-jupiter')
 }
 
 group = 'com.github.scsounddesigns.nwsreader'
 version = '1.0-SNAPSHOT'
 description = 'nwsreader'
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = 17
 
 publishing {
     publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
+	maven(MavenPublication) {
+	    from(components.java)
+	}
     }
+}
+
+/*
+sourceSets {
+	test {
+		compileClasspath += sourceSets.main.output
+		runtimeClasspath += sourceSets.main.output
+		java{}
+	}
+}
+*/
+
+
+compileJava {
+    options.incremental = true
+	options.fork = true
+	options.failOnError = false
+}
+
+java {
+    toolchain {
+	languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+tasks.named('test', Test) {
+    useJUnitPlatform()
+	dependsOn 'cleanTest'
+	failFast = true
+
+	testLogging{
+	    events "passed", "skipped", "failed"
+	}
 }
 
 tasks.withType(JavaCompile) {
@@ -41,4 +76,21 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Javadoc) {
     options.encoding = 'UTF-8'
+}
+
+task printSourceSetInformation() {
+    doLast{
+	sourceSets.each{ srcSet ->
+	    print"["+srcSet.name+"]"
+	    print "--->Source directories:\n" + srcSet.allJava.srcDirs + "\n"
+	    print "--->Output directories:\n" + srcSet.output.classesDirs.files+"\n"
+	    print "--->Compile classpath:\n"
+	    srcSet.compileClasspath.files.each {
+		print " " + it.path + "/n"
+	    }
+	    println ""
+
+	}
+    }
+
 }
